Changelog for Articles.

Articles 1.5.0
===============================
- Deprecate custom DB fields to use new properties field on modResource

Articles 1.4.4
===============================
- Update Quip to 2.2.0-pl

Articles 1.4.3
===============================
- [#6553] Fix issue with build where snippets were set as chunks
- Update tagLister to 1.1.5

Articles 1.4.2
===============================
- Add Articles snippet for easy displaying of articles anywhere on site
- [#6534] Add confirmation for delete article in grid
- [#6535] Fix issue with incorrect include reference for update services
- [#6535] Fix issue with url generation for twitter posting on first save
- [#6542] Fix right-click edit article from grid issue

Articles 1.4.1
===============================
- Add in container calls to each Article to allow sidebars
- [#6471] Fix issue with MODX import when no TV value is set yet TV is set to import
- [#6490] Fix missing <ul> in container template

Articles 1.4.0
===============================
- Add limiter for number of hashtags that are tweeted
- [#6457] Allow option of posting Article title/url/tags to Twitter on publish
- [#6430] Fix RSS sample template

Articles 1.3.0
===============================
- Add "Other Parameters" for listing snippet, which allows you to pass other properties to the getPage/getResources call
- Add option to Require Authentication for commenting
- Upgrade Archivist to 1.2.2-pl

Articles 1.2.1
===============================
- [#6400] Fix issue where alias was not changed in articles when container's alias was changed

Articles 1.2.0
===============================
- [#6385] Fix issue with Resource Groups tab not showing for individual Articles
- [#6374] Fix issue where tags were not showing in RSS
- [#6376] Fix date formatting for RSS pub date
- [#6375] Properly send RSS headers (requires Revo 2.2-pl or later)

Articles 1.1.5
===============================